cart logo added in the nav

--- a/aboutus.html
+++ b/aboutus.html
@@ -11,11 +11,12 @@
 
     <nav>
         <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
-        <ul>
+         <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="aboutus.html">ABOUT US</a></li>
             <li><a href="wineshop.html">WINE SHOP</a></li>
             <li><a href="events.html">EVENTS</a></li>
+            <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
         </ul>
     </nav>
 
