--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <li><a href="aboutus.html">ABOUT US</a></li>
             <li><a href="wineshop.html">WINE SHOP</a></li>
             <li><a href="events.html">EVENTS</a></li>
+            <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
         </ul>
+
     </nav>
     <section class="header_video">
         <video autoplay muted loop id="Moldovin_video" width="100%" height="auto" controls>
