--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <source src="video/IMG_4824.mp4" type="video/mp4">
         </video>
     </section>
+
+    <section class="banner_homepage">
+    </section>
 </header>
 
 <body>
@@ -61,7 +64,7 @@
 
         <div class="why_moldova_text">
             <h3>WHY MOLDOVA?</h3>
-            <h1> Born With Wine</h1>
+            <h2> Born With Wine</h2>
             <p> The little known European country of Moldova is putting its name on the map for its fantastic wines. The rich flavor of these wines is fast becoming recognised by world-renowned wine experts. Moldovan wine has great texture, warmth and flavour that will surprise and delight.
 
                 “Moldovans consider wine to be in the blood of their people. They are born with wine, live with wine and die with wine.”</p>
@@ -84,7 +87,7 @@
 
             <div class="box">
 
-                <div >
+                <div>
                     <img class="icon" src="images/icons/homepage/climate.png">
                 </div>
                 <div class="icon_text">
@@ -144,7 +147,7 @@
         <div> <img class="about_us_img" src="images/photos/homepage/theconnection.png"> </div>
         <div class="about_us_text">
             <h3>ABOUT US</h3>
-            <h1> We're the Connection</h1>
+            <h2> We're the Connection</h2>
             <p>Based in Copenhagen, Denmark, MoldoVin has been providing the Danish wine market with high quality Moldovan wine since 2017.
 
                 <br> <br>Our mission is to promote Moldovan culture and provide a platform for our community to experience exciting wines. </p>
@@ -156,7 +159,7 @@
         <div class="img_treasure_back"> <img class="our_treasure_img" src="images/photos/homepage/ourtreasure.png"> </div>
         <div class="our_treasure_text">
             <h3>WINES</h3>
-            <h1>Out Treasure</h1>
+            <h2>Out Treasure</h2>
             <p>In MoldoVin, we are proud of our wine selection. We only sell the best wines from specifically chosen wineries in Moldova.
 
                 <br> <br> Check which wines we are offering right now!
@@ -169,7 +172,7 @@
     <section class="winetastic_exp">
         <div class="winetastic_exp_text">
             <h3>EVENTS</h3>
-            <h1>Winetastic Experience</h1>
+            <h2>Winetastic Experience</h2>
             <p>We host two kind of wine tasting events to get you closer to the fantastic Moldovan wine culture.
                 But what both have in common is the informal setting of them, nothing to do with the traditional sit-down tastings.
                 <br><br> Our events invite to a more social interaction, not only between our wine experts and the attendees but also between the attendees themselves.</p>
