--- a/index.html
+++ b/index.html
@@ -185,9 +185,10 @@
 
 
     <footer>
-        <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+
         <div class="footergrid">
             <div class="footer_1">
+                <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
                 <p>Phone: +45 40116274</p>
                 <p>Mail: info@moldovin.dk</p>
                 <p>CVR: 38570609</p>
@@ -201,7 +202,7 @@
                     <p>Shipping</p>
                 </div> <br>
                 <div class="f2_Useful Links">
-                    <p class="ftitle_style">Information</p>
+                    <p class="ftitle_style">Useful Links</p>
                     <p>Contact us</p>
                     <p>Leave a review</p>
                     <p>Terms and Conditions</p>
