desktop style syncrone done

--- a/aboutus.html
+++ b/aboutus.html
@@ -11,15 +11,15 @@
 
     <nav>
         <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
-         <ul>
+        <ul>
             <li><a href="index.html">HOME</a></li>
             <li><a href="aboutus.html">ABOUT US</a></li>
             <li><a href="wineshop.html">WINE SHOP</a></li>
             <li><a href="events.html">EVENTS</a></li>
             <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
         </ul>
-    </nav>
 
+    </nav>
     <div class="banner_about">
         <h1>About us</h1>
     </div>
@@ -29,7 +29,7 @@
 <section class="we_connection">
     <div class="we_connection_text">
         <h3>ABOUT US</h3>
-        <h1>We're the connection</h1>
+        <h2>We're the connection</h2>
         <p>We. Love. Wine. Not only do we love wine, but we want to bring excellent wines to our customers.
             This is why we focus exclusively on Moldovan wines. Although Moldova is a little-known wine region, it can boast some of the richest wine culture in the world.</p>
     </div>
@@ -39,7 +39,7 @@
     <div class="img_beginnings_back"> <img class="the_beginnings_img" src="images/photos/aboutus/ourorigin.png"> </div>
     <div class="our_beginnings_text">
         <h3>THE BEGINNINGS</h3>
-        <h1>Our Origin</h1>
+        <h2>Our Origin</h2>
 
         <p>Based in Copenhagen, Denmark, MoldoVin has been providing the Danish wine market with high quality Moldovan wine since 2017.
 
@@ -50,7 +50,7 @@
 <section class="meet_family">
     <div class="meet_family_text">
         <h3>THE TEAM</h3>
-        <h1>Meet the family</h1>
+        <h2>Meet the family</h2>
         <p>Our team has years of experience in online retail and world-wide distribution.
             We are committed to providing our clients with fantastic service and great wines.</p>
 
@@ -105,15 +105,15 @@
     <section class="our_mission">
     <div class="our_mission_text">
         <h3>WHY WE ARE HERE</h3>
-        <h1>Our Mission</h1>
-        <p>Our mission is to bring Moldovan wine and culture to Scandinavia and provide a platform for our community to experience exciting wines.
+        <h2 style="color:white">Our Mission</h2>
+        <p style="color:white">Our mission is to bring Moldovan wine and culture to Scandinavia and provide a platform for our community to experience exciting wines.
 <br><br>
 We want to push your boundaries in new and interesting ways.</p>
     </div>
 </section>
 
      <section class="center">
-            <h5>Contact Us</h5>
+            <h2>Contact Us</h2>
 
             <div class="wrapper_contactus">
                 <div class="name">
@@ -148,10 +148,11 @@ We want to push your boundaries in new and interesting ways.</p>
 <body>
 
 
-    <footer>
-        <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+     <footer>
+
         <div class="footergrid">
             <div class="footer_1">
+                <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
                 <p>Phone: +45 40116274</p>
                 <p>Mail: info@moldovin.dk</p>
                 <p>CVR: 38570609</p>
@@ -165,7 +166,7 @@ We want to push your boundaries in new and interesting ways.</p>
                     <p>Shipping</p>
                 </div> <br>
                 <div class="f2_Useful Links">
-                    <p class="ftitle_style">Information</p>
+                    <p class="ftitle_style">Useful Links</p>
                     <p>Contact us</p>
                     <p>Leave a review</p>
                     <p>Terms and Conditions</p>
