--- a/events.html
+++ b/events.html
@@ -10,15 +10,17 @@
 
 <body>
     <header>
-                <nav>
-            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="aboutus.html">ABOUT US</a></li>
-                <li><a href="wineshop.html">WINE SHOP</a></li>
-                <li><a href="events.html">EVENTS</a></li>
-            </ul>
-        </nav>
+    <nav>
+        <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="wineshop.html">WINE SHOP</a></li>
+            <li><a href="events.html">EVENTS</a></li>
+            <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
+        </ul>
+
+    </nav>
             <div class="banner_events">
             <h1>Events</h1>
         </div>
@@ -50,29 +52,29 @@
             <h3>What we offer</h3>
             <h2>Unique wine tastings</h2>
 
-            <div class="wrapper">
+            <div class="wrapper_offer">
                 <div class="box center">
-                    <div class="offer">
-                        <img src="images/icons/events/wine-presentation.png">
+                    <div>
+                        <img class="icon" src="images/icons/events/wine-presentation.png">
                     </div>
-                    <p class="offer_title">Individualized presentations</p>
-                    <p class="offer_des">Our wine experts talk about the wine in smaller groups.</p>
+                    <p class="icon_title">Individualized presentations</p>
+                    <p class="icon_des">Our wine experts talk about the wine in smaller groups.</p>
                 </div>
 
                 <div class="box center">
-                    <div class="offer">
-                        <img src="images/icons/events/wine-selection.png">
+                    <div>
+                        <img class="icon" src="images/icons/events/wine-selection.png">
                     </div>
-                    <p class="offer_title">carefully selected wines</p>
-                    <p class="offer_des">We feature only exemplary Moldovan wines of premium quality.</p>
+                    <p class="icon_title">Carefully selected wines</p>
+                    <p class="icon_des">We feature only exemplary Moldovan wines of premium quality.</p>
                 </div>
 
                 <div class="box center">
-                    <div class="offer">
-                        <img src="images/icons/events/moldova.png">
+                    <div>
+                        <img class="icon" src="images/icons/events/moldova.png">
                     </div>
-                    <p class="offer_title">True Moldovan experience</p>
-                    <p class="offer_des">Detailed introduction of Moldovan wines, traditions, and culture.</p>
+                    <p class="icon_title">True Moldovan experience</p>
+                    <p class="icon_des">Detailed introduction of Moldovan wines, traditions, and culture.</p>
                 </div>
             </div>
         </section>
@@ -132,7 +134,49 @@
 
 
         </section>
+    <footer>
 
+        <div class="footergrid">
+            <div class="footer_1">
+                <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+                <p>Phone: +45 40116274</p>
+                <p>Mail: info@moldovin.dk</p>
+                <p>CVR: 38570609</p>
+            </div>
+
+            <div class="footer_2">
+                <div class="f2_information">
+                    <p class="ftitle_style">Information</p>
+                    <p>About us</p>
+                    <p>Wineries</p>
+                    <p>Shipping</p>
+                </div> <br>
+                <div class="f2_Useful Links">
+                    <p class="ftitle_style">Useful Links</p>
+                    <p>Contact us</p>
+                    <p>Leave a review</p>
+                    <p>Terms and Conditions</p>
+                </div>
+            </div>
+
+            <div class="footer_3">
+                <div class="stay_connected">
+                    <p class="ftitle_style">Stay connected</p>
+                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                    <button>SUBSCRIBE</button>
+                </div> <br>
+                <div class="our_partners">
+                    <p class="ftitle_style">Our Partners</p>
+                    <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                </div>
+
+
+            </div>
+
+        </div>
+
+        <p class="copyright">Copyright © Moldovin</p>
+    </footer>
     </main>
     <script src=""></script>
 </body></html>
