--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="icon_text">
                     <p class="icon_title"> Geography</p>
-                    <p class="icon_des">Moldova has 112 thousand hectares of vineyard planted with over 50 types of technical varieties. There are 3 wine regions: Valul lui Traian, Stefan Voda and Codru.</p>
+                    <p class="icon_des">Moldova has 112 thousand hectares of vineyard planted with over 50 types of technical varieties.</p>
                 </div>
             </div>
 
