--- a/privateevents.html
+++ b/privateevents.html
@@ -9,15 +9,17 @@
 
 <body>
     <header>
-        <nav>
-            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="aboutus.html">ABOUT US</a></li>
-                <li><a href="wineshop.html">WINE SHOP</a></li>
-                <li><a href="events.html">EVENTS</a></li>
-            </ul>
-        </nav>
+    <nav>
+        <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="wineshop.html">WINE SHOP</a></li>
+            <li><a href="events.html">EVENTS</a></li>
+            <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
+        </ul>
+
+    </nav>
         <div class="banner_privateevents">
             <h1>wine tastings for companies</h1>
         </div>
@@ -26,7 +28,7 @@
 
     <main>
 
-        <section class="intro">
+        <section class="intro private">
             <h3>wine tastings for companies</h3>
             <h2>Unique team building</h2>
             <p>Wine Down and Discover Moldovan Wine Culture at the workplace!
@@ -36,7 +38,7 @@
 
 
         <section class="event">
-            <div class="wrapper2">
+            <div class="wrapper2 wrapper2pictureright">
 
                 <div class="textbox">
                     <h3>Our offer</h3>
@@ -103,7 +105,7 @@
         </section>
 
         <section class="event">
-            <div class="wrapper2">
+            <div class="wrapper2 wrapper2pictureleft">
                 <div class="privateeventimage2"></div>
                 <div class="textbox">
                     <h3>The experience</h3>
@@ -122,7 +124,7 @@
             </div>
         </section>
 
-        <section class="center">
+        <section class="center contactus">
             <h5>Book your tasting here</h5>
 
             <p>To book an event with us, send us a message telling the number of people that will be attending the event or any specific requests and we'll make the experience happen!</p>
@@ -152,7 +154,49 @@
             </div>
 
         </section>
+    <footer>
 
+        <div class="footergrid">
+            <div class="footer_1">
+                <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+                <p>Phone: +45 40116274</p>
+                <p>Mail: info@moldovin.dk</p>
+                <p>CVR: 38570609</p>
+            </div>
+
+            <div class="footer_2">
+                <div class="f2_information">
+                    <p class="ftitle_style">Information</p>
+                    <p>About us</p>
+                    <p>Wineries</p>
+                    <p>Shipping</p>
+                </div> <br>
+                <div class="f2_Useful Links">
+                    <p class="ftitle_style">Useful Links</p>
+                    <p>Contact us</p>
+                    <p>Leave a review</p>
+                    <p>Terms and Conditions</p>
+                </div>
+            </div>
+
+            <div class="footer_3">
+                <div class="stay_connected">
+                    <p class="ftitle_style">Stay connected</p>
+                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                    <button>SUBSCRIBE</button>
+                </div> <br>
+                <div class="our_partners">
+                    <p class="ftitle_style">Our Partners</p>
+                    <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                </div>
+
+
+            </div>
+
+        </div>
+
+        <p class="copyright">Copyright © Moldovin</p>
+    </footer>
     </main>
 
 
