--- a/publicevents.html
+++ b/publicevents.html
@@ -10,15 +10,17 @@
 
 <body>
     <header>
-                <nav>
-            <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
-            <ul>
-                <li><a href="index.html">HOME</a></li>
-                <li><a href="aboutus.html">ABOUT US</a></li>
-                <li><a href="wineshop.html">WINE SHOP</a></li>
-                <li><a href="events.html">EVENTS</a></li>
-            </ul>
-        </nav>
+    <nav>
+        <div> <a href="index.html"><img class="logo" src="images/icons/homepage/moldovin_logo.svg"></a></div>
+        <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="aboutus.html">ABOUT US</a></li>
+            <li><a href="wineshop.html">WINE SHOP</a></li>
+            <li><a href="events.html">EVENTS</a></li>
+            <div> <a><img class="cart" src="images/icons/homepage/Icon%20feather-shopping-cart.svg"></a></div>
+        </ul>
+
+    </nav>
         <div class="banner_publicevents">
             <h1>Public wine tastings</h1>
         </div>
@@ -36,28 +38,28 @@
 
 
         <section class="event">
-            <div class="wrapper2">
+            <div class="wrapper2 wrapper2pictureleft">
                 <div class="event1image"></div>
                 <div class="textbox">
                     <div class="center">
                         <h5>Christmas wine tasting (Copenhagen)</h5>
-                        <div class="wrapper">
+                        <div class="wrapper publicwinetasting">
                             <div class="box">
                                 <div>
-                                    <img src="images/icons/events/time.png">
+                                    <img class="icon2" src="images/icons/events/time.png">
                                 </div>
                                 <p class="time">SAT, 12 DEC 2020 <br> 17:00-21:00h</p>
                             </div>
-                            <div class="box">
+                            <div class="box box2">
                                 <div>
-                                    <img src="images/icons/events/location.png">
+                                    <img class="icon2" src="images/icons/events/location.png">
                                 </div>
                                 <p class="time">Strøm Bar
                                     <br>Copenhagen</p>
                             </div>
                             <div class="box">
                                 <div>
-                                    <img src="images/icons/events/ticket.png">
+                                    <img class="icon2" src="images/icons/events/ticket.png">
                                 </div>
                                 <p class="time">200 DKK pre-tickets
                                     <br>250 DKK at the door</p>
@@ -75,29 +77,29 @@
         </section>
 
         <section class="event">
-            <div class="wrapper2">
+            <div class="wrapper2 wrapper2pictureleft">
                 <div class="event2image"></div>
                 <div class="textbox">
                     <div class="center">
                         <h5>Christmas wine tasting (Aarhus)</h5>
-                        <div class="wrapper">
+                        <div class="wrapper publicwinetasting">
                             <div class="box">
                                 <div>
-                                    <img src="images/icons/events/time.png">
+                                    <img class="icon2" src="images/icons/events/time.png">
                                 </div>
                                 <p class="time">SAT, 19 DEC 2020
                                     <br>16:00-19:00h</p>
                             </div>
-                            <div class="box">
+                            <div class="box box2">
                                 <div>
-                                    <img src="images/icons/events/location.png">
+                                    <img class="icon2" src="images/icons/events/location.png">
                                 </div>
                                 <p class="time">Fairbar
                                     <br>Aarhus</p>
                             </div>
                             <div class="box">
                                 <div>
-                                    <img src="images/icons/events/ticket.png">
+                                    <img class="icon2" src="images/icons/events/ticket.png">
                                 </div>
                                 <p class="time">200 DKK pre-tickets
                                     <br>250 DKK at the door</p>
@@ -113,7 +115,49 @@
                 </div>
             </div>
         </section>
+    <footer>
 
+        <div class="footergrid">
+            <div class="footer_1">
+                <img class="logowhite" src="images/icons/homepage/moldovin_white.svg" alt="Moldovin logo">
+                <p>Phone: +45 40116274</p>
+                <p>Mail: info@moldovin.dk</p>
+                <p>CVR: 38570609</p>
+            </div>
+
+            <div class="footer_2">
+                <div class="f2_information">
+                    <p class="ftitle_style">Information</p>
+                    <p>About us</p>
+                    <p>Wineries</p>
+                    <p>Shipping</p>
+                </div> <br>
+                <div class="f2_Useful Links">
+                    <p class="ftitle_style">Useful Links</p>
+                    <p>Contact us</p>
+                    <p>Leave a review</p>
+                    <p>Terms and Conditions</p>
+                </div>
+            </div>
+
+            <div class="footer_3">
+                <div class="stay_connected">
+                    <p class="ftitle_style">Stay connected</p>
+                    <p>Subscribe to our newsletter. Don’t worry we won’t spam you. You’ll only get the most important information and special offers!</p>
+                    <button>SUBSCRIBE</button>
+                </div> <br>
+                <div class="our_partners">
+                    <p class="ftitle_style">Our Partners</p>
+                    <img class="partners" src="images/icons/homepage/partners_logo.svg">
+                </div>
+
+
+            </div>
+
+        </div>
+
+        <p class="copyright">Copyright © Moldovin</p>
+    </footer>
     </main>
     <script src=""></script>
 </body></html>
