change winery description attribute

--- a/product.html
+++ b/product.html
@@ -78,7 +78,7 @@
                 <span class="winerytext">
                     <h3 class="winery_title">THE WINERY</h3>
                     <h2 class="winery_name">Carpe Diem</h2>
-                    <div class="winery_description">Carpe Diem is a family owned winery that goes back four generations. The winery sits in Codru wine region, known for its amazing terroir. They use both French inspired and indigenous varieties to make individual unique wines and blends. The vineyards fill 10,5 ha, so therefore they are part of the Moldovan Association for Small Wineries. Each wine is delicately produced, and all grapes are hand picked and harvested manually.</div>
+                    <p class="winery_description">Carpe Diem is a family owned winery that goes back four generations. The winery sits in Codru wine region, known for its amazing terroir. They use both French inspired and indigenous varieties to make individual unique wines and blends. The vineyards fill 10,5 ha, so therefore they are part of the Moldovan Association for Small Wineries. Each wine is delicately produced, and all grapes are hand picked and harvested manually.</p>
                 </span>
             </section>
         </article>
