try show product info tabs

--- a/product.html
+++ b/product.html
@@ -40,9 +40,23 @@
                             <h3 class="product_winery">Carpe Diem</h3>
                         </span>
                         <ul>
+
+                            <!--
+                            <a href="product.html?product_id=" class="thewine">The wine</a>
+                            <a href="productdescription.html?product_id=" class="description">Description</a>
+                            <a href="productprofile.html?product_id=" class="tasteprofile">Taste profile</a>
+                            -->
+
+                            <!--
+                            <li class="thewine"><a href="product.html?product_id=">The wine</a></li>
+                            <li class="description"><a href="productdescription.html?product_id=">Description</a></li>
+                            <li class="tasteprofile"><a href="productprofile.html?product_id=">Taste profile</a></li>
+                            -->
+
                             <li class="thewine">The wine</li>
                             <li class="description">Description</li>
                             <li class="tasteprofile">Taste profile</li>
+
                         </ul>
                         <span class="thewine_info">
                             <p class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
