show/toggle product tabs

--- a/product.html
+++ b/product.html
@@ -58,29 +58,39 @@
                             <li class="tasteprofile">Taste profile</li>
 
                         </ul>
-                        <span class="thewine_info">
-                            <p class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
-                            <p class="product_volume">Volume: <span class="volume">0,75</span> L</p>
-                            <p class="product_alcohol">Alc.%: <span class="alcohol">13.5</span> %</p>
-                            <p class="product_price">150 DKK</p>
-                            <p><strong>Quantity:</strong></p>
 
-                            <span class="shopping_buttons">
-                                <button class="minus_btn">-</button>
-                                <p class="quantity_number">1</p>
-                                <button class="plus_btn">+</button>
-                                <button class="addtocart_btn">ADD TO CART</button>
+                        <div class="thewine_info_wrapper">
+                            <span class="thewine_info">
+                                <p class="product_shortdescription">Finely balanced wine with a lot of character - light, fresh, but still rich of fruity flavour</p>
+                                <p class="product_volume">Volume: <span class="volume">0,75</span> L</p>
+                                <p class="product_alcohol">Alc.%: <span class="alcohol">13.5</span> %</p>
+                                <p class="product_price">150 DKK</p>
+                                <p><strong>Quantity:</strong></p>
+
+                                <span class="shopping_buttons">
+                                    <button class="minus_btn">-</button>
+                                    <p class="quantity_number">1</p>
+                                    <button class="plus_btn">+</button>
+                                    <button class="addtocart_btn">ADD TO CART</button>
+                                </span>
                             </span>
+                        </div>
 
-                        </span>
-                        <span class="description_info" style="display:none">
+                        <div class="description_info">
+                            <!--<span class="description_info" style="display:none">-->
                             <p class="product_longdescription">Blend of Feteasca Alba and Feteasca Regala. Feteasca Alba is a light, fresh and delicate wine, whereas Feteasca Regala has a richer flavour of citrus and apple. The blend takes the best from both indigenous grapes, and creates a finely balanced wine with a lot of character!
 
-                                Gold Medal Berlin Wine Awards 2018.</p>
-                        </span>
+                            Gold Medal Berlin Wine Awards 2018.</p>
+                        </div>
+
+                        <div class="tasteprofile_info">
+                            <img class="tasteprofile_img" src="images/photos/wineshop/tasteprofile2.png" alt="" />
+                        </div>
+                        <!--
                         <span class="tasteprofile_info" style="display:none">
                             <img class="tasteprofile_img" src="images/photos/wineshop/tasteprofile2.png" alt="" />
                         </span>
+                        -->
 
                     </div>
                 </div>
@@ -99,47 +109,47 @@
     </template>
 
 
-        <article class="product_suggestions">
-            <span class="center">
-                <h3>You might also like</h3>
-            </span>
-            <div class="wrapper5">
+    <article class="product_suggestions">
+        <span class="center">
+            <h3>You might also like</h3>
+        </span>
+        <div class="wrapper5">
 
-                <div class="box">
-                    <img class="suggestion_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
-                    <p class="suggestion_title">Femme Fatale</p>
-                    <p class="suggestion_winery">Carpe Diem</p>
-                    <p class="suggestion_price">150 DKK</p>
-                </div>
-                <div class="box">
-                    <img class="suggestion_img" src="images/photos/wineshop/1mimisauvignonblanc.png" alt="" />
-                    <p class="suggestion_title">Sauvignon Blanc</p>
-                    <p class="suggestion_winery">Castel Mimi</p>
-                    <p class="suggestion_price">125 DKK</p>
-                </div>
-                <div class="box">
-                    <img class="suggestion_img" src="images/photos/wineshop/1gitanararaneagra.png" alt="" />
-                    <p class="suggestion_title">Rara Neagra</p>
-                    <p class="suggestion_winery">Gitana</p>
-                    <p class="suggestion_price">175 DKK</p>
-                </div>
-                <div class="box">
-                    <img class="suggestion_img" src="images/photos/wineshop/1surori.png" alt="" />
-                    <p class="suggestion_title">Surori Rose</p>
-                    <p class="suggestion_winery">Gitana</p>
-                    <p class="suggestion_price">195 DKK</p>
-                </div>
-                <div class="box">
-                    <img class="suggestion_img" src="images/photos/wineshop/1feteascaalba.png" alt="" />
-                    <p class="suggestion_title">Feteasca Alba</p>
-                    <p class="suggestion_winery">Castel Mimi</p>
-                    <p class="suggestion_price">125 DKK</p>
-                </div>
+            <div class="box">
+                <img class="suggestion_img" src="images/photos/wineshop/femmefatale_wine.png" alt="" />
+                <p class="suggestion_title">Femme Fatale</p>
+                <p class="suggestion_winery">Carpe Diem</p>
+                <p class="suggestion_price">150 DKK</p>
             </div>
-        </article>
+            <div class="box">
+                <img class="suggestion_img" src="images/photos/wineshop/1mimisauvignonblanc.png" alt="" />
+                <p class="suggestion_title">Sauvignon Blanc</p>
+                <p class="suggestion_winery">Castel Mimi</p>
+                <p class="suggestion_price">125 DKK</p>
+            </div>
+            <div class="box">
+                <img class="suggestion_img" src="images/photos/wineshop/1gitanararaneagra.png" alt="" />
+                <p class="suggestion_title">Rara Neagra</p>
+                <p class="suggestion_winery">Gitana</p>
+                <p class="suggestion_price">175 DKK</p>
+            </div>
+            <div class="box">
+                <img class="suggestion_img" src="images/photos/wineshop/1surori.png" alt="" />
+                <p class="suggestion_title">Surori Rose</p>
+                <p class="suggestion_winery">Gitana</p>
+                <p class="suggestion_price">195 DKK</p>
+            </div>
+            <div class="box">
+                <img class="suggestion_img" src="images/photos/wineshop/1feteascaalba.png" alt="" />
+                <p class="suggestion_title">Feteasca Alba</p>
+                <p class="suggestion_winery">Castel Mimi</p>
+                <p class="suggestion_price">125 DKK</p>
+            </div>
+        </div>
+    </article>
 
 
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
