fetch category names

--- a/wineshop.html
+++ b/wineshop.html
@@ -43,6 +43,17 @@
         </section>
 </template>-->
 
+    <main></main>
+
+    <template id="categories_template">
+        <li>
+            <a href="" class="white_filter">
+                <div class="whitefilter_dot"></div>
+                <p class="whitefilter_title">WHITE</p>
+            </a>
+        </li>
+    </template>
+
 
     <section class="filternav">
         <ul class="filterwrapper">
@@ -68,9 +79,6 @@
         </ul>
     </section>
 
-
-    <main></main>
-
     <template id="product_template">
         <article class="productlist">
             <a href="product.html?product_id=" class="subpage_link">
@@ -86,7 +94,9 @@
     </template>
 
     <script src="script.js"></script>
-</body></html>
+</body>
+
+</html>
 
 
 
@@ -97,9 +107,9 @@
 
 
 
-    <!-- <p class="productlist_price"><span class="price">150</span> DKK</p> -->
+<!-- <p class="productlist_price"><span class="price">150</span> DKK</p> -->
 
-    <!--
+<!--
     <template>
         <article class="life-change">
             <div class="lifechangecard">
