--- a/wineshopcategory.html
+++ b/wineshopcategory.html
@@ -35,28 +35,6 @@
             Discover Moldovan wines.</h2>
     </section>
 
-    <!-- <template id="filterTemplate">
-        <section class="filternav">
-            <ul class="filterul">
-                <li><a href="" class=""></a></li>
-            </ul>
-        </section>
-</template>-->
-
-
-    <!--
-    <template id="categories_template">
-        <ul class="filterwrapper">
-            <li>
-                <a href="" class="white_filter">
-                    <div class="whitefilter_dot"></div>
-                    <p class="whitefilter_title">WHITE</p>
-                </a>
-            </li>
-        </ul>
-    </template>
--->
-
     <template id="categories_template">
         <ul class="filterul">
             <li class="filterli">
@@ -65,7 +43,6 @@
             </li>
         </ul>
     </template>
-
 
 
     <section class="filternav">
@@ -108,9 +85,7 @@
     </template>
 
     <script src="script.js"></script>
-</body>
-
-</html>
+</body></html>
 
 
 
